--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,10 @@
-
+{
+  "hosting": {
+    "public": "/",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
+  }
+}
